# Falcon-Perception

./: .gitignore  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agent_ui/: server.py
agent_ui/static/: index.html  main.js  style.css
demo/: perception_single.py  perception_single_mlx.py  streamlit_app.py
falcon_perception/: __init__.py  __main__.py  model.py  paged_inference.py
falcon_perception/mlx/: model.py
falcon_perception/server/: README.md  app.py  config.py  engine_worker.py
